# neo-apex

./: .gitignore  CLAUDE.md  README.md  services.json  start-services.sh
admindash/: .gitignore  CLAUDE.md  Dockerfile  fly.toml  pyproject.toml  test_user.json
admindash/backend/: .dockerignore  Dockerfile  README.md  fly.toml
admindash/backend/app/: auth.py  config.py  main.py
admindash/backend/app/api/: auth.py  entities.py  extract.py  health.py  leads.py  query.py
admindash/backend/app/middleware/: cloudflare_ip.py
admindash/backend/tests/: conftest.py  test_auth.py  test_auth_dep.py  test_cloudflare_ip.py  test_cors.py  test_entities.py  test_extract.py  test_leads.py  test_query.py
admindash/docs/superpowers/plans/: 2026-03-22-floatify-dark-theme-redesign.md  2026-03-30-add-student-entry.md  2026-03-31-student-list-view.md  2026-04-01-smart-student-enrollment.md  2026-04-07-add-student-modal.md  2026-04-08-admindash-program-page.md  (+1 more)
admindash/frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.jsonc
admindash/frontend/public/: _headers  test_user.json
admindash/frontend/src/: App.css  App.tsx  config.ts  index.css
admindash/markup/: common.js  footer.css  footer.js  homepage.html  homepage_student_total.html  i18n.js  index.html  lead.html  login.html  navbar.css  navbar.js  program.html  student-data.js  student-modal.css  student-modal.js  students.html  styles.css
datacore/: .dockerignore  .gitignore  Dockerfile  fly.toml  pyproject.toml
datacore/src/datacore/: __init__.py  embedder.py  query.py  store.py
datacore/tests/: conftest.py  test_abbrev.py  test_api.py  test_archive_api.py  test_auth_api.py  test_auth_exchange.py  test_auth_passwords.py  test_auth_registration.py  test_auth_seed.py  test_auth_tokens.py  test_cors_production.py  test_embedder.py  test_entity_auto_id.py  test_global_tables.py  test_next_id.py  test_query_aggregation.py  test_query_basic.py  test_query_custom_fields.py  test_query_pagination.py  test_registry_api.py  test_semantic_search.py  test_sequences.py  test_smoke.py  test_store_entities.py  test_store_list_models.py  test_store_models.py  test_store_rollback.py  test_tenant_api.py  test_tenant_prerequisite.py  test_unified_api.py  test_update_entity_api.py
launchpad/: .dockerignore  Dockerfile  fly.toml  pyproject.toml  test_user.json
launchpad/backend/: Dockerfile  fly.toml
launchpad/backend/app/: config.py  main.py
launchpad/backend/tests/: test_base_model_lead.py  test_cloudflare_ip.py  test_cors_production.py  test_registry_store.py  test_tenants_api.py
launchpad/frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
launchpad/frontend/public/: _headers
launchpad/frontend/src/: App.tsx  config.ts  index.css
papermite/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  model_extractor.py  models.py  pyproject.toml  test_user.json
papermite/backend/: Dockerfile  fly.toml
papermite/backend/app/: config.py  main.py
papermite/backend/tests/: conftest.py  test_auth.py  test_cloudflare_ip.py  test_cors_production.py  test_domain.py  test_extract_api.py  test_extraction_pipeline.py  test_extractor.py  test_field_extractor.py  test_finalize_api.py  test_finalize_helpers.py  test_finalize_mapper_integration.py  test_lance_store.py  test_mapper.py  test_processor.py  test_registry_store.py
papermite/docs/: integration.mmd  user-flow.mmd
papermite/frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
papermite/frontend/public/: _headers
papermite/frontend/src/: App.css  App.tsx  config.ts  index.css
(+443 files in other folders)
