[project]
name = "datacore"
version = "0.1.0"
description = "Centralized storage and query engine for the NeoApex platform"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.6",
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "python-toon>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacore"]
