[project]
name = "datacore"
version = "0.1.0"
description = "Centralized storage and query engine for the NeoApex platform"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.6",
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "python-toon>=0.1",
    "fastapi>=0.115",
    "uvicorn>=0.44.0",
    "voyageai>=0.3",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacore"]
