[project]
name = "papermite"
version = "0.1.0"
description = "Document ingestion gateway for the NeoApex platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-ai>=0.0.30",
    "docling>=2.70",
    "datacore @ file:///Users/kennylee/Development/NeoApex/datacore",
    "httpx>=0.28",
    "python-toon>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
